# PRIDE-PPPAR

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
scripts/: pdp3.sh
